# momoka

./: .gitignore  .gitmodules  AGENTS.md  README.md  pixi.toml  pyproject.toml  readme.md
config/robots/: panda.yaml
examples/: evaluate.yaml  record.yaml  replay.yaml  ros2.yaml
scripts/: isaacsim_ros2.py  isaacsim_ros2_driver.py  isaacsim_ros2_run.bat  lerobot_serve.py  lerobot_ws_client.py  mujoco_ros2.py  ros2_bridge.py  ros2_mujoco.py  ros2_mujoco_sim.py  ros2_robot.py  ros2_ws_server.py
src/: pyproject.toml
src/lerobot_robot_mmk/: __init__.py  config.py  robot.py
src/lerobot_teleoperator_mmk/: __init__.py  config.py  teleop.py
src/mmk/robot/: base.py  isaac.py  mujoco.py
src/mmk/ros2/: control.py  robot.py
tests/: test_isaacsim_ros2.py  test_isaacsim_ros2_refactored.py  test_mujoco_ros2.py  test_robot_loader.py
utils/: env_base.py  mjcf_utils.py  robot_loader.py
